--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,11 @@
      <Compile Include="Assets\Scripts\Helpers.cs" />
      <Compile Include="Assets\Scripts\InputManager.cs" />
      <Compile Include="Assets\Scripts\LevelGen.cs" />
+     <Compile Include="Assets\Scripts\Option.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Rusty.cs" />
+     <Compile Include="Assets\Scripts\StartClientCallback.cs" />
+     <Compile Include="Assets\Scripts\StartClientListener.cs" />
      <Compile Include="Assets\Scripts\Tile.cs" />
      <Compile Include="Assets\Scripts\TileDriver.cs" />
      <Compile Include="Assets\Scripts\Unit.cs" />
